[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/ActionUI.gd" type="Script" id=1]
[ext_resource path="res://assets/design.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/AisleUI.tscn" type="PackedScene" id=3]

[node name="ActionUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="PlayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 1024.0
margin_bottom = 61.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PlayContainer"]
margin_left = 447.0
margin_right = 576.0
margin_bottom = 42.0

[node name="PlayBtn" type="Button" parent="VBoxContainer/PlayContainer/HBoxContainer"]
margin_right = 57.0
margin_bottom = 42.0
text = "Play"

[node name="ResetBtn" type="Button" parent="VBoxContainer/PlayContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 129.0
margin_bottom = 42.0
text = "Reset"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Left" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 897.0
margin_bottom = 535.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 901.0
margin_right = 1005.0
margin_bottom = 535.0

[node name="ShopLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 30.0
theme = ExtResource( 2 )
text = "  Shop"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 104.0
margin_bottom = 106.0

[node name="AisleUI" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 72.0
size_flags_horizontal = 0

[node name="AislePrice" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_top = 21.0
margin_right = 89.0
margin_bottom = 51.0
text = "/"

[node name="Dollar" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_top = 21.0
margin_right = 104.0
margin_bottom = 51.0
text = "$"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 104.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 15 )

[node name="Scroller" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 104.0
margin_bottom = 531.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ProductList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Scroller"]

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 535.0
margin_right = 104.0
margin_bottom = 535.0

[node name="Right" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1009.0
margin_right = 1024.0
margin_bottom = 535.0
rect_min_size = Vector2( 15, 0 )

[connection signal="button_down" from="VBoxContainer/PlayContainer/HBoxContainer/PlayBtn" to="." method="_on_PlayBtn_button_down"]
[connection signal="pressed" from="VBoxContainer/PlayContainer/HBoxContainer/ResetBtn" to="." method="_on_ResetBtn_pressed"]
